# llm-food-delivery

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/src/: main.py
backend/src/config/: README.md  __init__.py  config.yaml
backend/src/data/: README.md  __init__.py  create_tables.py  data_models.py  data_utils.py  database.db  database.py  pinecone_restaurants.py  populate_fake_data.py  test_print_data.py
backend/src/endpoints/: README.md  __init__.py  health_check.py  routers.py
backend/src/handlers/: README.md  __init__.py  audio_handler.py  main_handler.py  prompt_handler.py  vectordb_handler.py
backend/src/images_generator/: README.md  image_generator.ipynb
backend/src/prompts/: README.md
backend/src/prompts/chat/: system.txt
backend/src/prompts/functions/: __init__.py  config.yaml  signatures.json
backend/src/schemas/: __init__.py  base_models.py
backend/src/services/: README.md  __init__.py
backend/src/services/functions/: __init__.py  add_food_to_cart.py  dummy_function.py  find_restaurant_pages.py  get_menu_of_restaurant.py  open_restaurant_page.py  remove_food_from_cart.py
backend/src/services/openai_service/: __init__.py  chat_completion.py  embeddings.py  tts.py  whisper.py
backend/src/utils/: utils.py
frontend/: .env.development  .gitignore  Dockerfile  docker-compose.yml  index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AppContainer.vue  (+1 more)
nginx/: Dockerfile  nginx.conf
(+21 files in other folders)
